BJI-38 validation performance improved, refactoring done
-in sorting feature in validation part removed extra xpath compilings
-some refactoring done